# rampart

./: .gitignore  README.md  pyproject.toml  spec-aegis-prd.md
.github/workflows/: ci.yml  publish.yml
src/aegis/: __init__.py  _cli.py  _config.py  _context.py  _decorators.py  _globals.py  _http_intercept.py  _models.py  _multi_agent.py  _permissions.py  _runtime.py
src/aegis/checkpointers/: __init__.py  _base.py  _memory.py  _sqlite.py
src/aegis/eval/: __init__.py  _assertions.py  _suite.py
src/aegis/testing/: __init__.py  _cassette.py  _mock_tools.py
src/rampart/: __init__.py  _approval.py  _artifacts.py  _cli.py  _config.py  _context.py  _decorators.py  _globals.py  _http_intercept.py  _models.py  _multi_agent.py  _permissions.py  _runtime.py  _sandbox.py
src/rampart/checkpointers/: __init__.py  _base.py  _memory.py  _redis.py  _sqlite.py
src/rampart/eval/: _assertions.py  _suite.py
src/rampart/testing/: __init__.py  _cassette.py  _mock_tools.py
tests/: conftest.py  test_approval.py  test_artifacts.py  test_budget.py  test_checkpointers.py  test_coverage.py  test_eval.py  test_graph.py  test_http_intercept.py  test_models.py  test_multi_agent.py  test_permissions.py  test_redis_checkpointer.py  test_sandbox.py  test_testing.py
