[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
version = "0.1.0"
description = "A runtime that makes LLM agents production-safe by default."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
postgres = ["asyncpg>=0.29"]
redis = ["redis>=5.0"]
litellm = ["litellm>=1.0"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
]

[project.scripts]
aegis = "aegis._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
