[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rampart"
version = "0.2.0"
description = "A runtime that makes LLM agents production-safe by default."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
postgres = ["asyncpg>=0.29"]
redis = ["redis>=5.0"]
litellm = ["litellm>=1.0"]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aiosqlite>=0.19",
    "ruff>=0.4",
    "mypy>=1.8",
]
all = [
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "redis>=5.0",
    "litellm>=1.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.scripts]
rampart = "rampart._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rampart"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["rampart"]
branch = true
omit = ["*/tests/*", "*/_cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default argument values
]

[tool.ruff.lint.isort]
known-first-party = ["rampart"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
ignore_missing_imports = true
files = ["src/rampart"]
